fixed collapsing navigation

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -19,9 +19,11 @@ body {
 .nav-link{
   color: gray;
 }
+
 .nav-link:hover{
-  color: black;
+  color: lightcoral;
 }
+
 .nav-link.active{
   color: lightcoral;
 }
@@ -31,7 +33,7 @@ body {
 }
 
 .navbar-brand:hover{
-  color: black;
+  color: lightcoral;
 }
 
 .lead{
